--- a/test.ipynb
+++ b/test.ipynb
@@ -105,19 +105,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.18930228, 0.80465512])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.random.rand(3,1)\n",
+    "a[:2].squeeze()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define lambda functions to calculate H w.r.t robot pose (Hr) and w.r.t scene\n",
-    "# point (Hs)\n",
-    "Hr_fcn = lambdify([xr,yr,t,xs,ys,zs,hc,fx,fy,px,py],Hr,\"numpy\")\n",
-    "Hs_fcn = lambdify([xr,yr,t,xs,ys,zs,hc,fx,fy,px,py],Hs,\"numpy\")\n",
-    "\n",
     "def fill_default(f):\n",
     "    return lambda xr,yr,t,xs,ys,zs: f(xr,yr,t,xs,ys,zs,CAM_HEIGHT,FX,FY,PX,PY)\n",
     "\n",
     "input_vars = [xr,yr,t,xs,ys,zs,hc,fx,fy,px,py]\n",
+    "\n",
+    "# define lambda functions to calculate H w.r.t robot pose (Hr) and w.r.t scene\n",
+    "# point (Hs)\n",
+    "Hr_fcn = fill_default(lambdify(input_vars,Hr,\"numpy\"))\n",
+    "Hs_fcn = fill_default(lambdify(input_vars,Hs,\"numpy\"))\n",
     "\n",
     "dHr_dxr = fill_default(lambdify(input_vars,diff(Hr,xr),\"numpy\"))\n",
     "dHr_dyr = fill_default(lambdify(input_vars,diff(Hr,yr),\"numpy\"))\n",
@@ -133,14 +155,49 @@
     "dHs_dys = fill_default(lambdify(input_vars,diff(Hs,ys),\"numpy\"))\n",
     "dHs_dzs = fill_default(lambdify(input_vars,diff(Hs,zs),\"numpy\"))\n",
     "\n",
-    "def dHn_dxn(x):\n",
+    "def observation_jacobian(x, landmark_ind):\n",
+    "    \"\"\"define the jacobian of the observation model using the lambdified sympy\n",
+    "    functions. Each jacobian is based on a single observation point\n",
+    "\n",
+    "    Args:\n",
+    "        x (_type_): _description_\n",
+    "        landmark_ind (_type_): _description_\n",
+    "\n",
+    "    Returns:\n",
+    "        _type_: _description_\n",
+    "    \"\"\"\n",
+    "    xr, yr, t = x[:3].squeeze()\n",
+    "    i = landmark_ind\n",
+    "    xs, ys, zs = x[3+i*3:3+i*3+3].squeeze()\n",
+    "\n",
+    "    Hr = Hr_fcn(xr,yr,t,xs,ys,zs)\n",
+    "    Hs = Hs_fcn(xr,yr,t,xs,ys,zs)\n",
+    "    \n",
+    "    N = x.shape[0]\n",
+    "    H = np.zeros((2,N))\n",
+    "    H[:,:3] = Hr\n",
+    "    H[:,3+i*3:3+i*3+3] = Hs\n",
+    "\n",
+    "    return H\n",
+    "\n",
+    "def dHn_dxn(x, landmark_ind, k):\n",
     "    \"\"\"calculate the derivative of observation Jacobian H w.r.t state variable\n",
-    "    x\n",
+    "    x's kth component\n",
     "\n",
     "    Args:\n",
     "        x (_type_): _description_\n",
     "    \"\"\"\n",
-    "    \n"
+    "    \n",
+    "    n = x.shape[0]\n",
+    "    if k>=n:\n",
+    "        raise ValueError\n",
+    "    \n",
+    "    xr, yr, t = x[:3].squeeze()\n",
+    "    i = landmark_ind\n",
+    "    xs, ys, zs = x[3+i*3:3+i*3+3].squeeze()\n",
+    "    \n",
+    "    if k==0:\n",
+    "        return "
    ]
   },
   {
