implemented new dH/dx method

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,28 +105,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.18930228, 0.80465512])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "a = np.random.rand(3,1)\n",
-    "a[:2].squeeze()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [],
@@ -155,6 +133,13 @@
     "dHs_dys = fill_default(lambdify(input_vars,diff(Hs,ys),\"numpy\"))\n",
     "dHs_dzs = fill_default(lambdify(input_vars,diff(Hs,zs),\"numpy\"))\n",
     "\n",
+    "def construct_H(x_dim,Hr,Hs,landmark_ind):\n",
+    "    H = np.zeros((2,x_dim))\n",
+    "    H[:,:3] = Hr\n",
+    "    i=landmark_ind\n",
+    "    H[:,3+i*3:3+i*3+3] = Hs\n",
+    "    return H\n",
+    "\n",
     "def observation_jacobian(x, landmark_ind):\n",
     "    \"\"\"define the jacobian of the observation model using the lambdified sympy\n",
     "    functions. Each jacobian is based on a single observation point\n",
@@ -172,11 +157,7 @@
     "\n",
     "    Hr = Hr_fcn(xr,yr,t,xs,ys,zs)\n",
     "    Hs = Hs_fcn(xr,yr,t,xs,ys,zs)\n",
-    "    \n",
-    "    N = x.shape[0]\n",
-    "    H = np.zeros((2,N))\n",
-    "    H[:,:3] = Hr\n",
-    "    H[:,3+i*3:3+i*3+3] = Hs\n",
+    "    H = construct_H(x.shape[0],Hr,Hs,landmark_ind)\n",
     "\n",
     "    return H\n",
     "\n",
@@ -195,9 +176,40 @@
     "    xr, yr, t = x[:3].squeeze()\n",
     "    i = landmark_ind\n",
     "    xs, ys, zs = x[3+i*3:3+i*3+3].squeeze()\n",
-    "    \n",
+    "    inputs = [xr,yr,t,xs,ys,zs]\n",
     "    if k==0:\n",
-    "        return "
+    "        return construct_H(n,dHr_dxr(*inputs),dHs_dxr(*inputs),landmark_ind)\n",
+    "    elif k==1:\n",
+    "        return construct_H(n,dHr_dyr(*inputs),dHs_dyr(*inputs),landmark_ind)\n",
+    "    elif k==2:\n",
+    "        return construct_H(n,dHr_dt(*inputs),dHs_dt(*inputs),landmark_ind)\n",
+    "    else:\n",
+    "        if k%3==0:\n",
+    "            return construct_H(n,dHr_dxs(*inputs),dHs_dxs(*inputs),landmark_ind)\n",
+    "        elif k%3==1:\n",
+    "            return construct_H(n,dHr_dys(*inputs),dHs_dys(*inputs),landmark_ind)\n",
+    "        elif k%3==2:\n",
+    "            return construct_H(n,dHr_dzs(*inputs),dHs_dzs(*inputs),landmark_ind)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4%3"
    ]
   },
   {
@@ -1209,7 +1221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
