updated Jacobian calculations

--- a/test.ipynb
+++ b/test.ipynb
@@ -161,7 +161,7 @@
     "\n",
     "    return H\n",
     "\n",
-    "def dHn_dxn(x, landmark_ind, k):\n",
+    "def dH_dxk_fcn(x, landmark_ind, k):\n",
     "    \"\"\"calculate the derivative of observation Jacobian H w.r.t state variable\n",
     "    x's kth component\n",
     "\n",
@@ -339,6 +339,10 @@
     "    Q = PROCESS_NOISE_COV\n",
     "    R = OBS_NOISE_COV\n",
     "\n",
+    "    n_landmark = (x0.shape[0]-3)/3\n",
+    "\n",
+    "    ########################### 1. FORWARD PASS ###############################\n",
+    "\n",
     "    # unpack vars, supposing xt,ut,xt+1,ut+1\n",
     "    dim = x_dim+u_dim\n",
     "    n_pass = vars.shape[0]/dim\n",
@@ -347,52 +351,83 @@
     "    cache = [None]*n_pass\n",
     "    for i in range(n_pass):\n",
     "        # the jacobians are evaluated at the series of x's\n",
-    "        x = vars[i*dim:i*dim+3]\n",
-    "        u = vars[i*dim+3:(i+1)*dim]\n",
+    "        u = vars[i*dim:i*dim+u_dim]\n",
+    "        x = vars[i*dim+u_dim:(i+1)*dim]\n",
+    "\n",
+    "        P_prev = P\n",
     "\n",
     "        # evaluate jacobian w.r.t state at the previous state\n",
     "        F,G = state_transition_jacobian(x_prev)\n",
     "\n",
     "        x_pred = state_transition(x_prev, u, 0) # zero noise\n",
-    "        y_pred = observation_model(x_pred)\n",
-    "        n_obs = len(y_pred)\n",
+    "        x_next = x_pred\n",
+    "        # y_pred = observation_model(x_pred)\n",
+    "        \n",
+    "        # the covariance matrix after motion model / prediction step\n",
+    "        P_pred = multi_dot([F,P,F.T]) + multi_dot([G,Q,G.T])\n",
     "\n",
-    "        # jacobian of measurement model w.r.t state\n",
-    "        H = observation_model_jacobian(x_pred)\n",
+    "        # set P_ to P_pred to interate through all landmarks\n",
+    "        P_ = P_pred\n",
+    "        cache_pred = [] # cache for storing intermediate P_'s\n",
     "\n",
-    "        P_ = multi_dot([F,P,F.T]) + multi_dot([G,Q,G.T])\n",
-    "        R_ = block_diag(*[R for _ in range(n_obs)])\n",
-    "        S = multi_dot(H, P_, H.T)+R_\n",
+    "        # go through each landmark\n",
+    "        for ind in range(n_landmark):\n",
+    "            # jacobian of measurement model w.r.t state\n",
+    "            H = observation_model_jacobian(x_pred, landmark_ind=ind)\n",
     "\n",
-    "        # Kalman gain\n",
-    "        K = multi_dot(P_, H.T, matinv(S))\n",
+    "            S = multi_dot(H, P_, H.T)+R\n",
     "\n",
-    "        # update cov P\n",
-    "        I_KH = (np.eye(x_dim)-K.dot(H))\n",
-    "        P_next = I_KH.dot(P)\n",
+    "            # Kalman gain\n",
+    "            K = multi_dot(P_, H.T, matinv(S))\n",
     "\n",
-    "        cache[i] = (F,G,H,K,P,P_,P_next,Q,R_,I_KH)\n",
-    "        P = P_next\n",
+    "            # update cov P\n",
+    "            I_KH = (np.eye(x_dim)-K.dot(H))\n",
+    "            P_next = I_KH.dot(P_)\n",
     "\n",
+    "            cache_pred.append((P_,P_next,K,H,I_KH))\n",
+    "            P_ = P_next\n",
+    "        \n",
+    "        P = P_\n",
+    "        P_next = P\n",
+    "\n",
+    "        cache[i] = (x_prev,x_next,F,G,P_prev,P_pred,P_next,cache_pred,Q,R)\n",
     "        x_prev = x\n",
     "\n",
-    "    # compute gradient\n",
+    "    P0_inv = np.linalg.inv(P0)\n",
+    "    loss = np.trace(P0_inv.dot(P))\n",
+    "\n",
+    "    ########################### 2. BACKWARD PASS ##############################\n",
+    "    \n",
     "    # ref: Benhamou, J., Bonnabel, S., & Chapdelaine, C. (2024). \n",
     "    # Backpropagation-Based Analytical Derivatives of EKF Covariance for Active \n",
     "    # Sensing. arXiv preprint arXiv:2402.17569. \n",
     "\n",
-    "    dL_dPn, dL_dxn = init_backprop() # dL_dxn is a column vector\n",
+    "    # initialize gradient w.r.t PN\n",
+    "    dL_dPn = P0_inv \n",
     "\n",
     "    # calculate derivative w.r.t the matrices\n",
     "    dmat = [None]*n_pass\n",
     "    for i in np.arange(n_pass-1,-1,-1):\n",
     "        # unpack cache\n",
-    "        Fn,Gn,Hn,Kn,Pnm1,Pn_nm1,Pn,Q,R,I_KH = cache[i]\n",
-    "\n",
-    "        # dL/dPn|(n-1)\n",
-    "        dL_dPn_nm1 = multi_dot([I_KH.T,dL_dPn,I_KH])\n",
+    "        x_prev,x_next,Fn,Gn,Pnm1,Pn_nm1,Pn,cache_pred,Q,R = cache[i]\n",
     "\n",
     "        # dL/dP(n-1)|(n-1)\n",
+    "        dL_dPn_list = [None]*n_landmark\n",
+    "        dL_dPn_list[-1] = dL_dPn\n",
+    "        dL_dHn_list = [None]*n_landmark\n",
+    "        for j in np.arange(n_landmark-1,-1,-1):\n",
+    "            P_,P_next,K,H,I_KH = cache_pred[j]\n",
+    "            if j>0:\n",
+    "                tmp = dL_dPn_list[j]\n",
+    "                dL_dPn_list[j-1] = multi_dot([I_KH.T,dL_dPn_list[j],I_KH])\n",
+    "            else: # j=0\n",
+    "                # dL/dPn|(n-1)\n",
+    "                dL_dPn_nm1 = multi_dot([I_KH.T,dL_dPn_list[1],I_KH])\n",
+    "\n",
+    "            # dL/dHn\n",
+    "            dL_dHn_list[j] = np.transpose(-2*multi_dot(\n",
+    "                [P_next, dL_dPn_list[j], P_next, H.T, matinv(R)]))\n",
+    "\n",
     "        dL_dPnm1 = multi_dot([Fn.T,dL_dPn_nm1,Fn])\n",
     "\n",
     "        # dL/dFn\n",
@@ -401,45 +436,55 @@
     "        # dL/dGn\n",
     "        dL_dGn = 2*multi_dot([dL_dPn_nm1, Gn, Q])\n",
     "\n",
-    "        # dL/dHn\n",
-    "        dL_dHn = -2*multi_dot([Pn, dL_dPn, Pn, Hn.T, matinv(R)])\n",
-    "\n",
     "        # dL/dRn\n",
     "        dL_dRn = None # the paper calculates this term, but our implementation \n",
     "                      # does not have Rn depending on x\n",
     "\n",
     "        # append all results\n",
-    "        dmat.append((dL_dPn,dL_dPn_nm1,dL_dFn,dL_dGn,dL_dHn))\n",
+    "        dmat[i]=(dL_dPn_list,dL_dPn_nm1,dL_dPnm1,dL_dFn,dL_dGn,dL_dHn_list)\n",
     "\n",
     "        # make current\n",
     "        dL_dPn = dL_dPnm1\n",
+    "    \n",
+    "    grad = None\n",
+    "    for i_pass in np.arange(n_pass-1,-1,-1):\n",
+    "        # unpack cache\n",
+    "        x_prev,x_next,Fn,Gn,Pnm1,Pn_nm1,Pn,cache_pred,Q,R = cache[i_pass]\n",
+    "        dL_dPn_list,dL_dPn_nm1,dL_dPnm1,dL_dFn,dL_dGn,dL_dHn_list = dmat[i_pass]\n",
     "\n",
-    "    for i in np.arange(n_pass-1,-1,-1):\n",
-    "        \n",
     "        # compute gradient for u, element-wise\n",
     "        dL_du = np.zeros((u_dim,1))\n",
-    "        for i in range(u_dim):\n",
+    "        for j in range(u_dim):\n",
     "            # first two terms in the paper are 0\n",
     "            tmp = np.zeros((x_dim,1))\n",
-    "            tmp[i] = dt\n",
-    "            dL_du[i,0] = np.trace(multi_dot([dL_dxn.T,tmp]))\n",
+    "            tmp[j] = dt\n",
+    "            dL_du[j,0] = np.trace(multi_dot([dL_dxn.T,tmp]))\n",
     "\n",
+    "        # compute gradient for x, element wise\n",
     "        dL_dxnm1 = np.zeros((x_dim,1))\n",
-    "        for i in range(x_dim):\n",
-    "            pass\n",
-    "        \n",
+    "        for ind in range(n_landmark):\n",
+    "            for k in range(x_dim):\n",
+    "                dH_dxk = dH_dxk_fcn(x_next,landmark_ind=ind,k=k)\n",
+    "                dL_dxnm1[k] += np.trace(multi_dot([dL_dHn_list[ind].T,dH_dxk]))\n",
     "\n",
-    "        \n",
+    "        # if i < n_pass-1, add the derivative coming from xn+1\n",
+    "        E = np.eye(x_dim)\n",
+    "        if i < n_pass-1:\n",
+    "            for k in range(x_dim):\n",
+    "                dL_dxnm1[k] += np.trace(multi_dot([dL_dxn.T,E[:,[k]]]))        \n",
+    "            \n",
+    "        # propagate back\n",
     "        dL_dxn = dL_dxnm1\n",
     "\n",
+    "        # concatenate gradient dL_du and dL_dx\n",
+    "        tmp = np.concatenate([dL_du,dL_dxnm1],axis=0)\n",
+    "        if grad is None:\n",
+    "            grad = tmp\n",
+    "        else:\n",
+    "            grad = np.concatenate([grad,tmp],axis=0)\n",
     "\n",
     "\n",
-    "\n",
-    "    return np.trace(np.linalg.inv(P0).dot(P))\n",
-    "\n",
-    "def init_backprop():\n",
-    "    pass\n",
-    "\n",
+    "    return loss, grad\n",
     "\n",
     "def state_transition(x, u, noise, dt=0.1):\n",
     "    \"\"\"state transition of a omnidirectional wheeled robot commanded by linear \n",
@@ -466,14 +511,11 @@
     "\n",
     "def state_transition_jacobian(x):\n",
     "    n = x.shape[0]\n",
-    "    jac = np.zeros((n,n))\n",
-    "    jac[0,0] = 1\n",
-    "    jac[1,1] = 1\n",
-    "    jac[2,2] = 1\n",
-    "\n",
-    "    F = jac\n",
-    "    G = jac\n",
-    "\n",
+    "    F = np.eye(n)\n",
+    "    G = np.zeros((n,n))\n",
+    "    G[0,0] = 1\n",
+    "    G[1,1] = 1\n",
+    "    G[2,2] = 1\n",
     "    return F,G\n",
     "\n",
     "def cam_pose_matrix(x, hc=CAM_HEIGHT):\n",
@@ -581,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,25 +632,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.5, 0. , 0. ],\n",
-       "       [0. , 0.5, 0. ],\n",
-       "       [0. , 0. , 0.5]])"
+       "array([1, 2, 1, 2])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = 2*np.eye(3)\n",
-    "matinv(a)"
+    "a = np.array([1,2])\n",
+    "np.concatenate([a,a])"
    ]
   },
   {
@@ -1221,7 +1261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
