--- a/test.ipynb
+++ b/test.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -17,8 +19,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "DELTA_T = 0.1\n",
@@ -28,7 +32,9 @@
     "PX = 0\n",
     "PY = 0\n",
     "PROCESS_NOISE_COV = np.diag([0.1,0.1,0.01]) # robot pose, (x,y,theta)\n",
-    "OBS_NOISE_COV = np.diag([1,1]) # pixel coord, (ux, uy)\n"
+    "OBS_NOISE_COV = np.diag([1,1]) # pixel coord, (ux, uy)\n",
+    "POSE_DIM = 3\n",
+    "SCENE_PT_DIM = 3\n"
    ]
   },
   {
@@ -41,8 +47,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "from sympy import symbols, Matrix, BlockMatrix, lambdify\n",
@@ -135,10 +143,21 @@
     "\n",
     "def construct_H(x_dim,Hr,Hs,landmark_ind):\n",
     "    H = np.zeros((2,x_dim))\n",
-    "    H[:,:3] = Hr\n",
+    "    H[:,:POSE_DIM] = Hr\n",
     "    i=landmark_ind\n",
-    "    H[:,3+i*3:3+i*3+3] = Hs\n",
+    "    start = POSE_DIM+i*SCENE_PT_DIM\n",
+    "    end = POSE_DIM+(i+1)*SCENE_PT_DIM\n",
+    "    H[:,start:end] = Hs\n",
     "    return H\n",
+    "\n",
+    "def get_scene_pt(x, landmark_ind):\n",
+    "    i=landmark_ind\n",
+    "    start = POSE_DIM+i*SCENE_PT_DIM\n",
+    "    end = POSE_DIM+(i+1)*SCENE_PT_DIM\n",
+    "    return x[start:end].squeeze()\n",
+    "\n",
+    "def get_robot_pose(x):\n",
+    "    return x[:POSE_DIM].squeeze()\n",
     "\n",
     "def observation_jacobian(x, landmark_ind):\n",
     "    \"\"\"define the jacobian of the observation model using the lambdified sympy\n",
@@ -151,9 +170,8 @@
     "    Returns:\n",
     "        _type_: _description_\n",
     "    \"\"\"\n",
-    "    xr, yr, t = x[:3].squeeze()\n",
-    "    i = landmark_ind\n",
-    "    xs, ys, zs = x[3+i*3:3+i*3+3].squeeze()\n",
+    "    xr, yr, t = get_robot_pose(x)\n",
+    "    xs,ys,zs = get_scene_pt(x,landmark_ind)\n",
     "\n",
     "    Hr = Hr_fcn(xr,yr,t,xs,ys,zs)\n",
     "    Hs = Hs_fcn(xr,yr,t,xs,ys,zs)\n",
@@ -173,13 +191,14 @@
     "    if k>=n:\n",
     "        raise ValueError\n",
     "    \n",
-    "    xr, yr, t = x[:3].squeeze()\n",
-    "    i = landmark_ind\n",
-    "    xs, ys, zs = x[3+i*3:3+i*3+3].squeeze()\n",
+    "    xr, yr, t = get_robot_pose(x)\n",
+    "    xs, ys, zs = get_scene_pt(x,landmark_ind)\n",
     "    inputs = [xr,yr,t,xs,ys,zs]\n",
-    "    if k==0:\n",
+    "    if k==0: # k determins which variable to take derivative\n",
+    "        # w.r.t. xr\n",
     "        return construct_H(n,dHr_dxr(*inputs),dHs_dxr(*inputs),landmark_ind)\n",
     "    elif k==1:\n",
+    "        # w.r.t. yr\n",
     "        return construct_H(n,dHr_dyr(*inputs),dHs_dyr(*inputs),landmark_ind)\n",
     "    elif k==2:\n",
     "        return construct_H(n,dHr_dt(*inputs),dHs_dt(*inputs),landmark_ind)\n",
