--- a/test.ipynb
+++ b/test.ipynb
@@ -201,55 +201,211 @@
     "        # w.r.t. yr\n",
     "        return construct_H(n,dHr_dyr(*inputs),dHs_dyr(*inputs),landmark_ind)\n",
     "    elif k==2:\n",
+    "        # w.r.t theta\n",
     "        return construct_H(n,dHr_dt(*inputs),dHs_dt(*inputs),landmark_ind)\n",
     "    else:\n",
     "        if k%3==0:\n",
+    "            # xs\n",
     "            return construct_H(n,dHr_dxs(*inputs),dHs_dxs(*inputs),landmark_ind)\n",
     "        elif k%3==1:\n",
+    "            # ys\n",
     "            return construct_H(n,dHr_dys(*inputs),dHs_dys(*inputs),landmark_ind)\n",
     "        elif k%3==2:\n",
-    "            return construct_H(n,dHr_dzs(*inputs),dHs_dzs(*inputs),landmark_ind)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "4%3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 48.79438373,  42.34450837, -26.0291731 ],\n",
-       "       [ -6.5349072 ,  -8.86937629,   5.01589975]])"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dHr_dxs(*np.random.rand(6))"
+    "            # zs\n",
+    "            return construct_H(n,dHr_dzs(*inputs),dHs_dzs(*inputs),landmark_ind)\n",
+    "        \n",
+    "def state_transition(x, u, noise, dt=0.1):\n",
+    "    \"\"\"state transition of a omnidirectional wheeled robot commanded by linear \n",
+    "    velocity in x, y direction, and an angular velocity. In the simulation,\n",
+    "    it is simply implemented as two linear joints and one rotational joint\n",
+    "\n",
+    "    Args:\n",
+    "        x (_type_): state vector. the first 3 elements correspond to robot pose\n",
+    "        u (_type_): control signal, vx, vy and wz\n",
+    "        noise (_type_): _description_\n",
+    "    \"\"\"\n",
+    "    if not isinstance(noise, np.ndarray):\n",
+    "        noise = noise*np.ones(POSE_DIM)\n",
+    "    else:\n",
+    "        noise = np.random.multivariate_normal(mean=np.zeros(POSE_DIM),\n",
+    "                                              cov=noise)\n",
+    "\n",
+    "    # unpack\n",
+    "    vx, vy, wz = u\n",
+    "\n",
+    "    # update\n",
+    "    x[0] = x[0]+vx*dt+noise[0]\n",
+    "    x[1] = x[1]+vy*dt+noise[1]\n",
+    "    x[2] = x[2]+wz*dt+noise[2]\n",
+    "\n",
+    "    return x\n",
+    "\n",
+    "def state_transition_jacobian(x):\n",
+    "    n = x.shape[0]\n",
+    "    F = np.eye(n)\n",
+    "    G = np.zeros((n,n))\n",
+    "    G[0,0] = 1\n",
+    "    G[1,1] = 1\n",
+    "    G[2,2] = 1\n",
+    "    return F,G\n",
+    "\n",
+    "def loss_func(vars,x0,P0):\n",
+    "    \"\"\"the loss function to be minimized by the scipy.optimize.minimize function\n",
+    "    vars consist of a series of both state x and control input u. \n",
+    "\n",
+    "    Args:\n",
+    "        vars (_type_): _description_\n",
+    "    \"\"\"\n",
+    "    Q = PROCESS_NOISE_COV # 3 by 3\n",
+    "    R = OBS_NOISE_COV # 2 by 2\n",
+    "    dt = DELTA_T\n",
+    "\n",
+    "    x_dim = x0.shape[0]\n",
+    "    u_dim = POSE_DIM\n",
+    "    n_landmark = (x_dim-POSE_DIM)/SCENE_PT_DIM\n",
+    "    \n",
+    "    ########################### 1. FORWARD PASS ###############################\n",
+    "\n",
+    "    # unpack vars, supposing ut,xt,ut+1,xt+1\n",
+    "    dim = u_dim+u_dim\n",
+    "    n_pass = vars.shape[0]/dim\n",
+    "    x_prev = x0\n",
+    "    P_prev = P0\n",
+    "    cache = [None]*n_pass\n",
+    "    for i in range(n_pass):\n",
+    "        # the jacobians are evaluated at the series of x's\n",
+    "        u = vars[i*dim:i*dim+u_dim]\n",
+    "        x = vars[i*dim+u_dim:(i+1)*dim]\n",
+    "\n",
+    "        # evaluate jacobian w.r.t state at the previous state\n",
+    "        F,G = state_transition_jacobian(x_prev)\n",
+    "\n",
+    "        x_pred = state_transition(x_prev, u, 0) # zero noise\n",
+    "        x_next = x_pred\n",
+    "        # y_pred = observation_model(x_pred)\n",
+    "        \n",
+    "        # the covariance matrix after motion model / prediction step\n",
+    "        P_pred = multi_dot([F,P_prev,F.T]) + multi_dot([G,Q,G.T])\n",
+    "\n",
+    "        # set P_ to P_pred to iterate through all landmarks\n",
+    "        P_ = P_pred\n",
+    "        cache_pred = [None]*n_landmark # cache for storing intermediate P_'s\n",
+    "\n",
+    "        # go through each landmark\n",
+    "        for ind in range(n_landmark):\n",
+    "            # jacobian of measurement model w.r.t state\n",
+    "            H = observation_jacobian(x_pred, landmark_ind=ind)\n",
+    "\n",
+    "            S = multi_dot(H, P_, H.T)+R\n",
+    "\n",
+    "            # Kalman gain\n",
+    "            K = multi_dot(P_, H.T, matinv(S))\n",
+    "\n",
+    "            # update cov P\n",
+    "            I_KH = np.eye(x_dim)-K.dot(H)\n",
+    "            P_next = I_KH.dot(P_)\n",
+    "\n",
+    "            cache_pred.append((P_,P_next,K,H,I_KH))\n",
+    "            P_ = P_next\n",
+    "        \n",
+    "        cache[i] = (x_prev,x_next,F,G,P_prev,P_pred,P_next,cache_pred,Q,R)\n",
+    "\n",
+    "        # update variables\n",
+    "        x_prev = x # note this is the variable to be optimized over\n",
+    "        P_prev = P_next\n",
+    "\n",
+    "    P0_inv = np.linalg.inv(P0)\n",
+    "    loss = np.trace(P0_inv.dot(P_next))\n",
+    "\n",
+    "    ########################### 2. BACKWARD PASS ##############################\n",
+    "    \n",
+    "    # ref: Benhamou, J., Bonnabel, S., & Chapdelaine, C. (2024). \n",
+    "    # Backpropagation-Based Analytical Derivatives of EKF Covariance for Active \n",
+    "    # Sensing. arXiv preprint arXiv:2402.17569. \n",
+    "\n",
+    "    # initialize gradient w.r.t PN\n",
+    "    dL_dPn = P0_inv \n",
+    "\n",
+    "    # calculate derivative w.r.t the matrices\n",
+    "    dmat = [None]*n_pass\n",
+    "    for i in np.arange(n_pass-1,-1,-1):\n",
+    "        # unpack cache\n",
+    "        x_prev,x_next,Fn,Gn,Pnm1,Pn_nm1,Pn,cache_pred,Q,R = cache[i]\n",
+    "\n",
+    "        # dL/dP(n-1)|(n-1)\n",
+    "        dL_dPn_list = [None]*n_landmark\n",
+    "        dL_dPn_list[-1] = dL_dPn\n",
+    "        dL_dHn_list = [None]*n_landmark\n",
+    "        for j in np.arange(n_landmark-1,-1,-1):\n",
+    "            P_,P_next,K,H,I_KH = cache_pred[j]\n",
+    "            if j>0:\n",
+    "                tmp = dL_dPn_list[j]\n",
+    "                dL_dPn_list[j-1] = multi_dot([I_KH.T,dL_dPn_list[j],I_KH])\n",
+    "            else: # j=0\n",
+    "                # dL/dPn|(n-1)\n",
+    "                dL_dPn_nm1 = multi_dot([I_KH.T,dL_dPn_list[0],I_KH])\n",
+    "\n",
+    "            # dL/dHn\n",
+    "            dL_dHn_list[j] = np.transpose(-2*multi_dot(\n",
+    "                [P_next, dL_dPn_list[j], P_next, H.T, matinv(R)]))\n",
+    "\n",
+    "        dL_dPnm1 = multi_dot([Fn.T,dL_dPn_nm1,Fn])\n",
+    "\n",
+    "        # dL/dFn\n",
+    "        dL_dFn = 2*multi_dot([dL_dPn_nm1, Fn, Pnm1])\n",
+    "\n",
+    "        # dL/dGn\n",
+    "        dL_dGn = 2*multi_dot([dL_dPn_nm1, Gn, Q])\n",
+    "\n",
+    "        # dL/dRn\n",
+    "        dL_dRn = None # the paper calculates this term, but our implementation \n",
+    "                      # does not have Rn depending on x\n",
+    "\n",
+    "        # append all results\n",
+    "        dmat[i]=(dL_dPn_list,dL_dPn_nm1,dL_dPnm1,dL_dFn,dL_dGn,dL_dHn_list)\n",
+    "\n",
+    "        # make current\n",
+    "        dL_dPn = dL_dPnm1\n",
+    "    \n",
+    "    grad = None\n",
+    "    for i_pass in np.arange(n_pass-1,-1,-1):\n",
+    "        # unpack cache\n",
+    "        x_prev,x_next,Fn,Gn,Pnm1,Pn_nm1,Pn,cache_pred,Q,R = cache[i_pass]\n",
+    "        dL_dPn_list,dL_dPn_nm1,dL_dPnm1,dL_dFn,dL_dGn,dL_dHn_list = dmat[i_pass]\n",
+    "\n",
+    "        # compute gradient for u, element-wise\n",
+    "        dL_du = np.zeros((u_dim,1))\n",
+    "        for j in range(u_dim):\n",
+    "            # first two terms in the paper are 0\n",
+    "            tmp = np.zeros((x_dim,1))\n",
+    "            tmp[j] = dt\n",
+    "            dL_du[j,0] = np.trace(multi_dot([dL_dxn.T,tmp]))\n",
+    "\n",
+    "        # compute gradient for x, element wise\n",
+    "        dL_dxnm1 = np.zeros((x_dim,1))\n",
+    "        for ind in range(n_landmark):\n",
+    "            for k in range(x_dim):\n",
+    "                dH_dxk = dH_dxk_fcn(x_next,landmark_ind=ind,k=k)\n",
+    "                dL_dxnm1[k] += np.trace(multi_dot([dL_dHn_list[ind].T,dH_dxk]))\n",
+    "\n",
+    "        # if i < n_pass-1, add the derivative coming from xn+1\n",
+    "        E = np.eye(x_dim)\n",
+    "        if i < n_pass-1:\n",
+    "            for k in range(x_dim):\n",
+    "                dL_dxnm1[k] += np.trace(multi_dot([dL_dxn.T,E[:,[k]]]))        \n",
+    "            \n",
+    "        # propagate back\n",
+    "        dL_dxn = dL_dxnm1\n",
+    "\n",
+    "        # concatenate gradient dL_du and dL_dx\n",
+    "        tmp = np.concatenate([dL_du,dL_dxnm1],axis=0)\n",
+    "        if grad is None:\n",
+    "            grad = tmp\n",
+    "        else:\n",
+    "            grad = np.concatenate([grad,tmp],axis=0)\n",
+    "\n",
+    "\n",
+    "    return loss, grad"
    ]
   },
   {
@@ -504,6 +660,7 @@
     "\n",
     "\n",
     "    return loss, grad\n",
+    "\n",
     "\n",
     "def state_transition(x, u, noise, dt=0.1):\n",
     "    \"\"\"state transition of a omnidirectional wheeled robot commanded by linear \n",
