added new and cleaned up notebook

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "metadata": {}
    },
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "metadata": {}
    },
@@ -32,9 +32,9 @@
     "PX = 0\n",
     "PY = 0\n",
     "PROCESS_NOISE_COV = np.diag([0.1,0.1,0.01]) # robot pose, (x,y,theta)\n",
-    "OBS_NOISE_COV = np.diag([1,1]) # pixel coord, (ux, uy)\n",
+    "OBS_NOISE_COV = np.diag([0.1,0.1]) # pixel coord, (ux, uy)\n",
     "POSE_DIM = 3\n",
-    "SCENE_PT_DIM = 3\n"
+    "SCENE_PT_DIM = 3"
    ]
   },
   {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "metadata": {}
    },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,6 +158,29 @@
     "\n",
     "def get_robot_pose(x):\n",
     "    return x[:POSE_DIM].squeeze()\n",
+    "\n",
+    "def state_transition(x, u, noise, dt=0.1):\n",
+    "    \"\"\"state transition of a omnidirectional wheeled robot commanded by linear \n",
+    "    velocity in x, y direction, and an angular velocity. In the simulation,\n",
+    "    it is simply implemented as two linear joints and one rotational joint\n",
+    "\n",
+    "    Args:\n",
+    "        x (_type_): state vector. the first 3 elements correspond to robot pose\n",
+    "        u (_type_): control signal, vx, vy and wz\n",
+    "        noise (_type_): _description_\n",
+    "    \"\"\"\n",
+    "    if not isinstance(noise, np.ndarray):\n",
+    "        noise = noise*np.ones(3)\n",
+    "\n",
+    "    # unpack\n",
+    "    vx, vy, wz = u\n",
+    "\n",
+    "    # update\n",
+    "    x[0] = x[0]+vx*dt+noise[0]\n",
+    "    x[1] = x[1]+vy*dt+noise[1]\n",
+    "    x[2] = wrap(x[2]+wz*dt)+noise[2]\n",
+    "\n",
+    "    return x\n",
     "\n",
     "def observation_jacobian(x, landmark_ind):\n",
     "    \"\"\"define the jacobian of the observation model using the lambdified sympy\n",
@@ -243,7 +266,7 @@
     "def state_transition_jacobian(x):\n",
     "    n = x.shape[0]\n",
     "    F = np.eye(n)\n",
-    "    G = np.zeros((n,n))\n",
+    "    G = np.zeros((n,POSE_DIM))\n",
     "    G[0,0] = 1\n",
     "    G[1,1] = 1\n",
     "    G[2,2] = 1\n",
@@ -262,13 +285,13 @@
     "\n",
     "    x_dim = x0.shape[0]\n",
     "    u_dim = POSE_DIM\n",
-    "    n_landmark = (x_dim-POSE_DIM)/SCENE_PT_DIM\n",
+    "    n_landmark = int((x_dim-POSE_DIM)/SCENE_PT_DIM)\n",
     "    \n",
     "    ########################### 1. FORWARD PASS ###############################\n",
     "\n",
     "    # unpack vars, supposing ut,xt,ut+1,xt+1\n",
-    "    dim = u_dim+u_dim\n",
-    "    n_pass = vars.shape[0]/dim\n",
+    "    dim = u_dim+x_dim\n",
+    "    n_pass = int(vars.shape[0]/dim)\n",
     "    x_prev = x0\n",
     "    P_prev = P0\n",
     "    cache = [None]*n_pass\n",
@@ -283,9 +306,9 @@
     "        x_pred = state_transition(x_prev, u, 0) # zero noise\n",
     "        x_next = x_pred\n",
     "        # y_pred = observation_model(x_pred)\n",
-    "        \n",
     "        # the covariance matrix after motion model / prediction step\n",
-    "        P_pred = multi_dot([F,P_prev,F.T]) + multi_dot([G,Q,G.T])\n",
+    "        P_pred = multi_dot([F,P_prev,F.T]) + \\\n",
+    "            multi_dot([G,Q,G.T])\n",
     "\n",
     "        # set P_ to P_pred to iterate through all landmarks\n",
     "        P_ = P_pred\n",
@@ -296,16 +319,16 @@
     "            # jacobian of measurement model w.r.t state\n",
     "            H = observation_jacobian(x_pred, landmark_ind=ind)\n",
     "\n",
-    "            S = multi_dot(H, P_, H.T)+R\n",
+    "            S = multi_dot([H, P_, H.T])+R\n",
     "\n",
     "            # Kalman gain\n",
-    "            K = multi_dot(P_, H.T, matinv(S))\n",
+    "            K = multi_dot([P_, H.T, matinv(S)])\n",
     "\n",
     "            # update cov P\n",
     "            I_KH = np.eye(x_dim)-K.dot(H)\n",
     "            P_next = I_KH.dot(P_)\n",
     "\n",
-    "            cache_pred.append((P_,P_next,K,H,I_KH))\n",
+    "            cache_pred[ind]=(P_,P_next,K,H,I_KH)\n",
     "            P_ = P_next\n",
     "        \n",
     "        cache[i] = (x_prev,x_next,F,G,P_prev,P_pred,P_next,cache_pred,Q,R)\n",
@@ -368,45 +391,235 @@
     "        dL_dPn = dL_dPnm1\n",
     "    \n",
     "    grad = None\n",
+    "    dL_dxn = np.zeros((x_dim,n_pass))\n",
+    "    dL_du = np.zeros((u_dim, n_pass ))\n",
     "    for i_pass in np.arange(n_pass-1,-1,-1):\n",
     "        # unpack cache\n",
     "        x_prev,x_next,Fn,Gn,Pnm1,Pn_nm1,Pn,cache_pred,Q,R = cache[i_pass]\n",
     "        dL_dPn_list,dL_dPn_nm1,dL_dPnm1,dL_dFn,dL_dGn,dL_dHn_list = dmat[i_pass]\n",
     "\n",
-    "        # compute gradient for u, element-wise\n",
-    "        dL_du = np.zeros((u_dim,1))\n",
-    "        for j in range(u_dim):\n",
-    "            # first two terms in the paper are 0\n",
-    "            tmp = np.zeros((x_dim,1))\n",
-    "            tmp[j] = dt\n",
-    "            dL_du[j,0] = np.trace(multi_dot([dL_dxn.T,tmp]))\n",
-    "\n",
     "        # compute gradient for x, element wise\n",
-    "        dL_dxnm1 = np.zeros((x_dim,1))\n",
     "        for ind in range(n_landmark):\n",
     "            for k in range(x_dim):\n",
     "                dH_dxk = dH_dxk_fcn(x_next,landmark_ind=ind,k=k)\n",
-    "                dL_dxnm1[k] += np.trace(multi_dot([dL_dHn_list[ind].T,dH_dxk]))\n",
+    "                dL_dxn[k,i_pass] += np.trace(multi_dot([\n",
+    "                    dL_dHn_list[ind].T, dH_dxk\n",
+    "                    ]))\n",
     "\n",
     "        # if i < n_pass-1, add the derivative coming from xn+1\n",
     "        E = np.eye(x_dim)\n",
-    "        if i < n_pass-1:\n",
+    "        if i_pass < n_pass-1:\n",
     "            for k in range(x_dim):\n",
-    "                dL_dxnm1[k] += np.trace(multi_dot([dL_dxn.T,E[:,[k]]]))        \n",
-    "            \n",
-    "        # propagate back\n",
-    "        dL_dxn = dL_dxnm1\n",
+    "                dL_dxn[k,i_pass] += np.trace(multi_dot([\n",
+    "                    dL_dxn[:,[i_pass+1]].T, E[:,[k]]\n",
+    "                    ]))      \n",
     "\n",
-    "        # concatenate gradient dL_du and dL_dx\n",
-    "        tmp = np.concatenate([dL_du,dL_dxnm1],axis=0)\n",
-    "        if grad is None:\n",
-    "            grad = tmp\n",
-    "        else:\n",
-    "            grad = np.concatenate([grad,tmp],axis=0)\n",
+    "        # compute gradient for u, element-wise\n",
+    "        for k in range(u_dim):\n",
+    "            # first two terms in the paper are 0\n",
+    "            tmp = np.zeros((x_dim,1))\n",
+    "            tmp[k,0] = dt\n",
+    "            dL_du[k,i_pass] = np.trace(multi_dot([dL_dxn[:,[i_pass]].T, tmp]))\n",
     "\n",
+    "    grad = np.vstack([dL_du, dL_dxn]).T\n",
+    "    grad = grad.reshape((-1,1))\n",
     "\n",
     "    return loss, grad"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test loss function implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.],\n",
+       "       [ 0.],\n",
+       "       [ 0.],\n",
+       "       [ 1.],\n",
+       "       [ 1.],\n",
+       "       [ 1.],\n",
+       "       [ 1.],\n",
+       "       [-1.],\n",
+       "       [ 1.]])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# assume two scene points\n",
+    "robot_pose = [0,0,0]\n",
+    "scene_pt1 = [1.0,1.0,1.0]\n",
+    "scene_pt2 = [1.0,-1.0,1.0]\n",
+    "\n",
+    "x0 = np.array(robot_pose+scene_pt1+scene_pt2)[:,np.newaxis]\n",
+    "x0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20.03337457 16.44419682 13.43738756  0.39230236  0.69298967  8.38533237\n",
+      "  5.84416695  4.98322548  3.17386874]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# pick some random covariance matrix\n",
+    "tmp = np.random.randn(x0.shape[0],x0.shape[0])\n",
+    "P0 = multi_dot([tmp.T,tmp])\n",
+    "w,d = np.linalg.eig(P0)\n",
+    "print(w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.1 ]\n",
+      " [ 0.1 ]\n",
+      " [ 0.  ]\n",
+      " [ 0.01]\n",
+      " [ 0.01]\n",
+      " [ 0.  ]\n",
+      " [ 1.  ]\n",
+      " [ 1.  ]\n",
+      " [ 1.  ]\n",
+      " [ 1.  ]\n",
+      " [-1.  ]\n",
+      " [ 1.  ]\n",
+      " [ 0.1 ]\n",
+      " [ 0.1 ]\n",
+      " [ 0.  ]\n",
+      " [ 0.02]\n",
+      " [ 0.02]\n",
+      " [ 0.  ]\n",
+      " [ 1.  ]\n",
+      " [ 1.  ]\n",
+      " [ 1.  ]\n",
+      " [ 1.  ]\n",
+      " [-1.  ]\n",
+      " [ 1.  ]\n",
+      " [ 0.1 ]\n",
+      " [ 0.1 ]\n",
+      " [ 0.  ]\n",
+      " [ 0.03]\n",
+      " [ 0.03]\n",
+      " [ 0.  ]\n",
+      " [ 1.  ]\n",
+      " [ 1.  ]\n",
+      " [ 1.  ]\n",
+      " [ 1.  ]\n",
+      " [-1.  ]\n",
+      " [ 1.  ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# suppose moving constant in one direction, no rotation\n",
+    "vx = 0.1\n",
+    "vy = 0.1\n",
+    "w = 0\n",
+    "n_pass = 3\n",
+    "x = x0\n",
+    "vars = None\n",
+    "for i_pass in range(n_pass):\n",
+    "    u = np.array([vx,vy,w])[:,np.newaxis]\n",
+    "    x = state_transition(x,u,0)\n",
+    "    \n",
+    "    tmp = np.concatenate([u,x],axis=0)\n",
+    "    if vars is None:\n",
+    "        vars = tmp\n",
+    "    else:\n",
+    "        vars = np.concatenate([vars,tmp],axis=0)\n",
+    "print(vars)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.2403349268064146\n",
+      "[[-0.03655274]\n",
+      " [ 0.00644569]\n",
+      " [-0.01878454]\n",
+      " [-0.3655274 ]\n",
+      " [ 0.06445688]\n",
+      " [-0.18784539]\n",
+      " [ 0.3655274 ]\n",
+      " [-0.06445688]\n",
+      " [ 0.01235754]\n",
+      " [ 0.3655274 ]\n",
+      " [-0.06445688]\n",
+      " [ 0.01235754]\n",
+      " [ 0.09986711]\n",
+      " [ 0.27827842]\n",
+      " [-0.01059417]\n",
+      " [ 0.99867109]\n",
+      " [ 2.78278424]\n",
+      " [-0.10594171]\n",
+      " [-0.99867109]\n",
+      " [-2.78278424]\n",
+      " [ 0.00813526]\n",
+      " [-0.99867109]\n",
+      " [-2.78278424]\n",
+      " [ 0.00813526]\n",
+      " [-0.07509215]\n",
+      " [-0.02856238]\n",
+      " [-0.00612263]\n",
+      " [-0.75092154]\n",
+      " [-0.28562375]\n",
+      " [-0.0612263 ]\n",
+      " [ 0.75092154]\n",
+      " [ 0.28562375]\n",
+      " [ 0.00416587]\n",
+      " [ 0.75092154]\n",
+      " [ 0.28562375]\n",
+      " [ 0.00416587]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "loss, grad = loss_func(vars,x0,P0)\n",
+    "print(loss)\n",
+    "print(grad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -441,8 +654,8 @@
     "        x (_type_): state mean\n",
     "        P: state cov matrix\n",
     "        u (_type_): control input\n",
-    "        y : new measurement\n",
-    "        R : measurement noise covariance\n",
+    "        y : new measurement    print(x_dim, u_dim, n_landmark)\n",
+    "ariance\n",
     "        jacobians (_type_): dictionary coding various jacobians\n",
     "        state_transition : state transition function\n",
     "        observation_model : measurement function\n",
@@ -504,186 +717,7 @@
     "    # inverse)\n",
     "    return np.trace(np.linalg.inv(P0).dot(P))\n",
     "\n",
-    "def loss_func(vars,x0,P0,x_dim=15,u_dim=3,dt=DELTA_T):\n",
-    "    \"\"\"the loss function to be minimized by the scipy.optimize.minimize function\n",
-    "    vars consist of a series of both state x and control input u. \n",
     "\n",
-    "    Args:\n",
-    "        vars (_type_): _description_\n",
-    "    \"\"\"\n",
-    "    Q = PROCESS_NOISE_COV\n",
-    "    R = OBS_NOISE_COV\n",
-    "\n",
-    "    n_landmark = (x0.shape[0]-3)/3\n",
-    "\n",
-    "    ########################### 1. FORWARD PASS ###############################\n",
-    "\n",
-    "    # unpack vars, supposing xt,ut,xt+1,ut+1\n",
-    "    dim = x_dim+u_dim\n",
-    "    n_pass = vars.shape[0]/dim\n",
-    "    x_prev = x0\n",
-    "    P = P0\n",
-    "    cache = [None]*n_pass\n",
-    "    for i in range(n_pass):\n",
-    "        # the jacobians are evaluated at the series of x's\n",
-    "        u = vars[i*dim:i*dim+u_dim]\n",
-    "        x = vars[i*dim+u_dim:(i+1)*dim]\n",
-    "\n",
-    "        P_prev = P\n",
-    "\n",
-    "        # evaluate jacobian w.r.t state at the previous state\n",
-    "        F,G = state_transition_jacobian(x_prev)\n",
-    "\n",
-    "        x_pred = state_transition(x_prev, u, 0) # zero noise\n",
-    "        x_next = x_pred\n",
-    "        # y_pred = observation_model(x_pred)\n",
-    "        \n",
-    "        # the covariance matrix after motion model / prediction step\n",
-    "        P_pred = multi_dot([F,P,F.T]) + multi_dot([G,Q,G.T])\n",
-    "\n",
-    "        # set P_ to P_pred to interate through all landmarks\n",
-    "        P_ = P_pred\n",
-    "        cache_pred = [] # cache for storing intermediate P_'s\n",
-    "\n",
-    "        # go through each landmark\n",
-    "        for ind in range(n_landmark):\n",
-    "            # jacobian of measurement model w.r.t state\n",
-    "            H = observation_model_jacobian(x_pred, landmark_ind=ind)\n",
-    "\n",
-    "            S = multi_dot(H, P_, H.T)+R\n",
-    "\n",
-    "            # Kalman gain\n",
-    "            K = multi_dot(P_, H.T, matinv(S))\n",
-    "\n",
-    "            # update cov P\n",
-    "            I_KH = (np.eye(x_dim)-K.dot(H))\n",
-    "            P_next = I_KH.dot(P_)\n",
-    "\n",
-    "            cache_pred.append((P_,P_next,K,H,I_KH))\n",
-    "            P_ = P_next\n",
-    "        \n",
-    "        P = P_\n",
-    "        P_next = P\n",
-    "\n",
-    "        cache[i] = (x_prev,x_next,F,G,P_prev,P_pred,P_next,cache_pred,Q,R)\n",
-    "        x_prev = x\n",
-    "\n",
-    "    P0_inv = np.linalg.inv(P0)\n",
-    "    loss = np.trace(P0_inv.dot(P))\n",
-    "\n",
-    "    ########################### 2. BACKWARD PASS ##############################\n",
-    "    \n",
-    "    # ref: Benhamou, J., Bonnabel, S., & Chapdelaine, C. (2024). \n",
-    "    # Backpropagation-Based Analytical Derivatives of EKF Covariance for Active \n",
-    "    # Sensing. arXiv preprint arXiv:2402.17569. \n",
-    "\n",
-    "    # initialize gradient w.r.t PN\n",
-    "    dL_dPn = P0_inv \n",
-    "\n",
-    "    # calculate derivative w.r.t the matrices\n",
-    "    dmat = [None]*n_pass\n",
-    "    for i in np.arange(n_pass-1,-1,-1):\n",
-    "        # unpack cache\n",
-    "        x_prev,x_next,Fn,Gn,Pnm1,Pn_nm1,Pn,cache_pred,Q,R = cache[i]\n",
-    "\n",
-    "        # dL/dP(n-1)|(n-1)\n",
-    "        dL_dPn_list = [None]*n_landmark\n",
-    "        dL_dPn_list[-1] = dL_dPn\n",
-    "        dL_dHn_list = [None]*n_landmark\n",
-    "        for j in np.arange(n_landmark-1,-1,-1):\n",
-    "            P_,P_next,K,H,I_KH = cache_pred[j]\n",
-    "            if j>0:\n",
-    "                tmp = dL_dPn_list[j]\n",
-    "                dL_dPn_list[j-1] = multi_dot([I_KH.T,dL_dPn_list[j],I_KH])\n",
-    "            else: # j=0\n",
-    "                # dL/dPn|(n-1)\n",
-    "                dL_dPn_nm1 = multi_dot([I_KH.T,dL_dPn_list[1],I_KH])\n",
-    "\n",
-    "            # dL/dHn\n",
-    "            dL_dHn_list[j] = np.transpose(-2*multi_dot(\n",
-    "                [P_next, dL_dPn_list[j], P_next, H.T, matinv(R)]))\n",
-    "\n",
-    "        dL_dPnm1 = multi_dot([Fn.T,dL_dPn_nm1,Fn])\n",
-    "\n",
-    "        # dL/dFn\n",
-    "        dL_dFn = 2*multi_dot([dL_dPn_nm1, Fn, Pnm1])\n",
-    "\n",
-    "        # dL/dGn\n",
-    "        dL_dGn = 2*multi_dot([dL_dPn_nm1, Gn, Q])\n",
-    "\n",
-    "        # dL/dRn\n",
-    "        dL_dRn = None # the paper calculates this term, but our implementation \n",
-    "                      # does not have Rn depending on x\n",
-    "\n",
-    "        # append all results\n",
-    "        dmat[i]=(dL_dPn_list,dL_dPn_nm1,dL_dPnm1,dL_dFn,dL_dGn,dL_dHn_list)\n",
-    "\n",
-    "        # make current\n",
-    "        dL_dPn = dL_dPnm1\n",
-    "    \n",
-    "    grad = None\n",
-    "    for i_pass in np.arange(n_pass-1,-1,-1):\n",
-    "        # unpack cache\n",
-    "        x_prev,x_next,Fn,Gn,Pnm1,Pn_nm1,Pn,cache_pred,Q,R = cache[i_pass]\n",
-    "        dL_dPn_list,dL_dPn_nm1,dL_dPnm1,dL_dFn,dL_dGn,dL_dHn_list = dmat[i_pass]\n",
-    "\n",
-    "        # compute gradient for u, element-wise\n",
-    "        dL_du = np.zeros((u_dim,1))\n",
-    "        for j in range(u_dim):\n",
-    "            # first two terms in the paper are 0\n",
-    "            tmp = np.zeros((x_dim,1))\n",
-    "            tmp[j] = dt\n",
-    "            dL_du[j,0] = np.trace(multi_dot([dL_dxn.T,tmp]))\n",
-    "\n",
-    "        # compute gradient for x, element wise\n",
-    "        dL_dxnm1 = np.zeros((x_dim,1))\n",
-    "        for ind in range(n_landmark):\n",
-    "            for k in range(x_dim):\n",
-    "                dH_dxk = dH_dxk_fcn(x_next,landmark_ind=ind,k=k)\n",
-    "                dL_dxnm1[k] += np.trace(multi_dot([dL_dHn_list[ind].T,dH_dxk]))\n",
-    "\n",
-    "        # if i < n_pass-1, add the derivative coming from xn+1\n",
-    "        E = np.eye(x_dim)\n",
-    "        if i < n_pass-1:\n",
-    "            for k in range(x_dim):\n",
-    "                dL_dxnm1[k] += np.trace(multi_dot([dL_dxn.T,E[:,[k]]]))        \n",
-    "            \n",
-    "        # propagate back\n",
-    "        dL_dxn = dL_dxnm1\n",
-    "\n",
-    "        # concatenate gradient dL_du and dL_dx\n",
-    "        tmp = np.concatenate([dL_du,dL_dxnm1],axis=0)\n",
-    "        if grad is None:\n",
-    "            grad = tmp\n",
-    "        else:\n",
-    "            grad = np.concatenate([grad,tmp],axis=0)\n",
-    "\n",
-    "\n",
-    "    return loss, grad\n",
-    "\n",
-    "\n",
-    "def state_transition(x, u, noise, dt=0.1):\n",
-    "    \"\"\"state transition of a omnidirectional wheeled robot commanded by linear \n",
-    "    velocity in x, y direction, and an angular velocity. In the simulation,\n",
-    "    it is simply implemented as two linear joints and one rotational joint\n",
-    "\n",
-    "    Args:\n",
-    "        x (_type_): state vector. the first 3 elements correspond to robot pose\n",
-    "        u (_type_): control signal, vx, vy and wz\n",
-    "        noise (_type_): _description_\n",
-    "    \"\"\"\n",
-    "    if not isinstance(noise, np.ndarray):\n",
-    "        noise = noise*np.ones(3)\n",
-    "\n",
-    "    # unpack\n",
-    "    vx, vy, wz = u\n",
-    "\n",
-    "    # update\n",
-    "    x[0] = x[0]+vx*dt+noise[0]\n",
-    "    x[1] = x[1]+vy*dt+noise[1]\n",
-    "    x[2] = wrap(x[2]+wz*dt)+noise[2]\n",
-    "\n",
-    "    return x\n",
     "\n",
     "def state_transition_jacobian(x):\n",
     "    n = x.shape[0]\n",
